--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,56 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      # Required
+      - OPENAI_API_KEY=${OPENAI_API_KEY:?OPENAI_API_KEY environment variable required}
+      
+      # Optional - Security (recommended in production)
+      - API_KEYS=${API_KEYS:?API_KEYS required for production}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:?ALLOWED_ORIGINS required for production}
+      - ALLOWED_IP_CIDRS=${ALLOWED_IP_CIDRS:-}  # Optional IP allowlist
+      - ENVIRONMENT=${ENVIRONMENT:-production}
+      
+      # Optional - Model Configuration
       - OPENAI_MODEL=${OPENAI_MODEL:-gpt-4o}
-      - TOP_K_RESULTS=${TOP_K_RESULTS:-3}
+      - TOP_K=${TOP_K:-5}
+      - USE_HUGGINGFACE=${USE_HUGGINGFACE:-true}
+      - DATASET_SPLIT=${DATASET_SPLIT:-train}
+      
+      # Optional - Service Configuration
       - API_HOST=0.0.0.0
       - API_PORT=8000
     volumes:
-      - ./embeddings:/app/embeddings
-      - ./logs:/app/logs
+      - ./embeddings:/app/embeddings:ro  # Read-only embeddings
+      - cache-data:/app/.cache  # Persistent cache
+      - log-data:/app/logs  # Persistent logs
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
+    # Security: Drop unnecessary capabilities
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+    # Security: Read-only root filesystem (except volumes)
+    read_only: true
+    tmpfs:
+      - /tmp:mode=1777,size=100M
+    # Resource limits
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 8G
+        reservations:
+          cpus: '1.0'
+          memory: 4G
+
+volumes:
+  cache-data:
+    driver: local
+  log-data:
+    driver: local
