--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,43 @@
-# Core Dependencies
-langchain>=0.1.0
-langchain-openai>=0.0.5
-langchain-community>=0.0.20
-langchain-core>=0.1.0
+# Core Dependencies (pinned versions for security)
+langchain==0.1.13
+langchain-openai==0.0.8
+langchain-community==0.0.29
+langchain-core==0.1.31
 
-# HuggingFace Dataset (V2)
-datasets>=2.14.0
-huggingface-hub>=0.19.0
+# HuggingFace Dataset
+datasets==2.16.1
+huggingface-hub==0.20.3
 
 # Vector Store
-faiss-cpu>=1.7.4
-numpy>=1.24.0
+faiss-cpu==1.7.4
+numpy==1.24.4
 
 # Embeddings (alternative)
-sentence-transformers>=2.2.0
+sentence-transformers==2.5.1
 
 # API Service
-fastapi>=0.109.0
-uvicorn[standard]>=0.27.0
-pydantic>=2.5.0
+fastapi==0.109.2
+uvicorn[standard]==0.27.1
+pydantic==2.6.1
+
+# Security
+slowapi==0.1.9  # Rate limiting
+cryptography==42.0.2  # Encryption utilities
+
+# Monitoring
+prometheus-client==0.19.0
 
 # Tools
-duckduckgo-search>=4.0.0
+duckduckgo-search==4.4.3
 
 # Utilities
-python-dotenv>=1.0.0
-requests>=2.31.0
+python-dotenv==1.0.1
+requests==2.31.0
 
-# Development
+# Security Auditing (dev/CI)
+pip-audit>=2.7.0
+safety>=3.0.0
+
 pytest>=7.4.0
 pytest-cov>=4.1.0
 black>=23.12.0
